--- a/CGATPipelines/pipeline_bamstats/pipeline.ini
+++ b/CGATPipelines/pipeline_bamstats/pipeline.ini
@@ -10,42 +10,60 @@
 #
 ################################################################
 ## general options
+################################################################
 [general]
 
-# Project name
-projectname=CGATProject
+# directory where reads are located, specified as:
+# "0" for the current directory "."
+# "1" for the subdirectory "./data.dir".
+# alternative a path may be specified, but this is not recommended.
+input=0
 
-# Copyright statement
-copyright=CGAT (2010-2014)
-
-# The short X.Y version.
-version=0.1
-
-# The full version, including alpha/beta/rc tags.
-release=0.1
-
-########################################################
-# the genome to use (UCSC convention)
+# genome is ucsc convention
 genome=hg19
 
-################################################################
-#
-# Location of annotation database
-#
-################################################################
-[annotations]
-database=/ifs/data/annotations/hg19_ensembl62/csvdb
+# directory where exported data is located
+exportdir=export
 
-# directory with annotation information
-dir=
+# location of indexed genome, needs to be set
+genome_dir=/ifs/mirror/genomes/index
+
+# scratchdir for data not to be backed up
+scratchdir=/tmp
+
+# a version string
+version=
+
+# directory for publishing results on the web
+web_dir=../web
 
 ################################################################
-#
-# sphinxreport build options
-#
+## bam file parameters
 ################################################################
-[report]
+[bam]
 
-# prefix to use for publishing the report from this pipeline
-prefix=default
+paired_end=0
+
+# sometimes a bam has its sequence quality stripped to save space
+# if this is the case then specify below:
+sequence_stipped=0
+
+################################################################
+## name of the database that you want to generate
+################################################################
+[database]
+
+name=csvdb
+
+################################################################
+## Location of database following the running pipeline_gtf_subset.py 
+################################################################
+[gtf]
+
+#database location 
+database=/ifs/projects/adam/pipeline_publication/csvdb
+
+# location that pipeline_bamstats.py was ran
+dir=/ifs/projects/adam/pipeline_publication
+
 
