updated code to fix small bugs

--- a/CGATPipelines/pipeline_gtf_subset/pipeline.ini
+++ b/CGATPipelines/pipeline_gtf_subset/pipeline.ini
@@ -85,7 +85,7 @@ assembly_report=/ifs/projects/adam/pipeline_publication/GRCh38.p10_assembly_repo
 # for contigs (ensembl nomenclature)
 # to be removed from ensembl_filename_gtf during genome
 # sanitization
-remove_contigs=random,chrUn
+remove_contigs=random,chrUn,na,alt
 
 
 # information about UCSC databases
@@ -170,10 +170,6 @@ mapability_filtered_bed=ucsc.dir/mapability_%i.filtered.bed.gz
 # no filtering, chromosome names are sanitized
 geneset_all_gtf=ensembl.dir/geneset_all.gtf.gz
 
-# a geneset with contigs present in the UCSC genome
-# Filtering out the non UCSC contigs is perfomed, chromosome names are sanitized
-geneset_ucsc_genome_gtf=ensembl.dir/geneset_noAlt_genome.gtf.gz
-
 # gtf file with cds parts of transcripts
 # CDS parts of transcripts is gene set
 geneset_cds_gtf=ensembl.dir/geneset_cds.gtf.gz
@@ -199,22 +195,28 @@ geneset_lincrna_exons_gtf=ensembl.dir/geneset_lincrna_exons.gtf.gz
 # covering all exons in a gene
 geneset_flat_gtf=ensembl.dir/geneset_flat.gtf.gz
 
-# fasta file with peptide sequences
-peptides_fasta=ensembl.dir/peptides.fasta
-
-# fasta file with cdna sequences
-cdna_fasta=ensembl.dir/cdna.fasta
-
-# fasta file with cds sequences
-cds_fasta=ensembl.dir/cds.fasta
+# intron gtf
+geneset_intron_gtf=ensembl.dir/geneset_introns.gtf.gz
 
 ##=======================================
-## MiRBase derived annotations
+##  derived annotations
 
 geneset_primary_mir_gff=mirbase.dir/miRNA_primary_transcripts.gff3.gz
 
 geneset_mir_gff=mirbase.dir/miRNA_non_primary_transcripts.gff3.gz
 
+##=========================================
+# generate ref_flat
+
+# ref flat files for Picard stats
+ref_flat=geneset.dir/ref_flat.txt
+
+
+##=========================================
+## Genomic context bed filename
+
+# bed-formatted file with genomic context
+genomic_context_bed=bed.dir/genomic_context.bed.gz
 #-----------------------------------------------------
 # tables in the database
 table_genome=genome
